Commit 2 c4 item add

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -14,3 +14,5 @@ commands:
     description: gives PLayer spleef Shovel
   nohit:
     description: no Hit item
+  c4:
+    description: keine ahnugn
