Block destroy fix, Added Item Shop, PlayerQuitEvent, added min/max Player

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -23,3 +23,5 @@ commands:
     description: keine ahnung
   kickall:
     description: kickall to hub
+  countdown:
+    description: sets countdown to null
