--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -1,3 +1,8 @@
 delay: 6
-maxPlayers: 2
-gameWorld: tnt
+minPlayers: 1
+maxPlayers: 16
+gameWorld: world
+JoinLocation:
+  joinX: 226
+  joinY: 4
+  joinZ: 48.5
